# Python_Modules

./: README.md
Python00/ex1/: ft_plot_area.py
Python00/ex2/: ft_harvest_total.py
Python00/ex3/: ft_plant_age.py
Python00/ex4/: ft_water_reminder.py
Python00/ex5/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
Python00/ex6/: ft_garden_summary.py
Python01/ex0/: ft_garden_intro.py
Python01/ex1/: ft_garden_data.py
Python01/ex2/: ft_plant_growth.py
Python01/ex3/: ft_plant_factory.py
Python01/ex4/: ft_garden_security.py
Python01/ex5/: ft_plant_types.py
Python01/ex6/: ft_garden_analytics.py
Python02/ex0/: ft_first_exception.py
Python02/ex1/: ft_different_errors.py
Python02/ex2/: ft_custom_errors.py
Python02/ex3/: ft_finally_block.py
Python02/ex4/: ft_raise_errors.py
Python02/ex5/: ft_garden_management.py
Python03/ex0/: ft_command_quest.py
Python03/ex1/: ft_score_analytics.py
Python03/ex2/: ft_coordinate_system.py
Python03/ex3/: ft_achievement_tracker.py
Python03/ex4/: ft_inventory_system.py
Python03/ex5/: ft_data_stream.py
Python03/ex6/: ft_analytics_dashboard.py
Python04/ex0/: ft_ancient_text.py
Python04/ex1/: ft_archive_creation.py
Python04/ex2/: ft_stream_management.py
Python04/ex3/: ft_vault_security.py
Python04/ex4/: ft_crisis_response.py
Python06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
Python_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_sacred_scroll.py
Python_08/ex1/: loading.py  pyproject.toml  requirements.txt
(+92 files in other folders)
