[project]
name = "loading"
version = "0.1.0"
description = "Matrix data analysis tool"
authors = [
    { name = "yikoubaz" }
]
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0.1,<3.0.0",
    "numpy>=1.24.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "requests>=2.31.0,<3.0.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"